fix oversized site title on small devices

--- a/cso/static/home.sass
+++ b/cso/static/home.sass
@@ -29,7 +29,8 @@ html, body, .parallax
     margin-bottom: 0
 
 .site-title
-  font-size: floor(($font-size-base * 3.6))
+  @media (min-width: $screen-xs-min)
+    font-size: floor(($font-size-base * 3.6))
 
 .cso-logo-landing
   max-width: 500px
